recursion.lessons.recursion.tree.Tree.scala.error
Tree:5: error: not found: value step
else {current(step);
              ^Tree:10: error: not found: value step
tree(step-1, length*shrink, angle, shrink)
     ^